Bug 235897. hidden widgets don't count as part of the opque region. r+sr=dbaron,a=mkaply